[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player_behavior.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlayerController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Personal_Assets/dash_particle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/dash_sprite.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0291631 ), -2.74067, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.0
angular_velocity = -193.85
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 2.52269 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
dash_object = ExtResource( 5 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletExit" type="Node2D" parent="."]
position = Vector2( 54, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="NameLabel" type="Label" parent="."]
margin_left = -30.0
margin_top = -59.0
margin_right = 30.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="."]
margin_left = -30.6674
margin_top = 37.7757
margin_right = 29.3326
margin_bottom = 51.7757
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="dash_particles" type="Particles2D" parent="."]
emitting = false
amount = 100
one_shot = true
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="PlayerController" parent="." instance=ExtResource( 3 )]
